--- a/language_aplication/language_aplication/language_aplication.csproj
+++ b/language_aplication/language_aplication/language_aplication.csproj
@@ -33,4 +33,10 @@
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Speech">
+      <HintPath>..\..\..\..\..\Downloads\System.Speech\System.Speech.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
